--- a/css/app.css
+++ b/css/app.css
@@ -93,3 +93,13 @@ button {
 #give-up:hover {
     background-color: #c7c7c7;
 }
+
+.player-turn {
+    background: lightcoral;
+    color: darkred;
+}
+
+.monster-turn {
+    background-color: lightblue;
+    color: blue;
+}
